# airac-aixm-updater

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: aixm.rs  aixm_combine.rs  aixm_dfs.rs  error.rs  load_es.rs  main.rs
src/aixm_combine/: isec.rs  mod.rs  sct.rs
